[gd_scene load_steps=2 format=3 uid="uid://dcmacsl8fulaw"]

[ext_resource type="Script" path="res://addons/logic_graph/editor/close_graph_button/close_graph_button.gd" id="1_fsg55"]

[node name="CloseGraphButton" type="Button"]
disabled = true
text = "Close Graph"
script = ExtResource("1_fsg55")

[node name="ConfirmDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(692, 83)
unresizable = true
dialog_text = "Are you sure you want to close this logic graph? Any unsaved changes will be lost forever!"

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="confirmed" from="ConfirmDialog" to="." method="_on_confirm_dialog_confirmed"]
